<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".receivePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/receiver"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:padding="6dp"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <!--                line-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_gray">



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#2196F3"
                        app:counterEnabled="true"
                        app:counterMaxLength="13"
                        app:counterTextAppearance="@style/CounterStyle">
                        <EditText
                            android:id="@+id/nid2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/Nid_no1"
                            android:textColor="@color/colorPrimary"
                            android:inputType="number"
                            android:padding="8dp"
                            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:textAllCaps="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#2196F3">
                        <EditText
                            android:id="@+id/name2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/Name"
                            android:textColor="@color/colorPrimary"
                            android:padding="8dp"
                            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:textAllCaps="false"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#2196F3"
                        app:counterEnabled="true"
                        app:counterMaxLength="11"
                        app:counterTextAppearance="@style/CounterStyle">
                        <EditText
                            android:id="@+id/number2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/Mobile_Number"
                            android:textColor="@color/colorPrimary"
                            android:ems="11"
                            android:inputType="number"
                            android:layout_marginTop="6dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:padding="8dp"
                            android:textAllCaps="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#2196F3">
                        <EditText
                            android:id="@+id/family"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textColor="@color/colorPrimary"
                            android:inputType="number"
                            android:layout_marginTop="6dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="20dp"
                            android:padding="8dp"
                            android:drawableLeft="@drawable/ic_person_add_black_24dp"
                            android:hint="@string/family"
                            android:textAllCaps="false"/>
                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_gray">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#2196F3">
                    <EditText
                        android:id="@+id/address2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/Home_address"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:padding="8dp"
                        android:drawableLeft="@drawable/ic_home_black_24dp"
                        android:textAllCaps="true"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#2196F3">
                    <EditText
                        android:id="@+id/address3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/thana"
                        android:textColor="@color/colorPrimary"
                        android:padding="8dp"
                        android:drawableLeft="@drawable/ic_home_black_24dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textAllCaps="true"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#2196F3">
                    <EditText
                        android:id="@+id/address4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/District"
                        android:textColor="@color/colorPrimary"
                        android:padding="8dp"
                        android:drawableLeft="@drawable/ic_home_black_24dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="20dp"
                        android:textAllCaps="true"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>




                <!--                line-->





                <!--                new-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_gray">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/warning"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/roboto"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="#আপনার বাড়িতে কি অসুস্থ কেউ আছেন?"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/roboto"
                            android:layout_marginTop="30dp"
                            android:textStyle="bold"/>

                        <CheckBox
                            android:id="@+id/checkBox7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="হ্যাঁ"
                            android:textColor="@color/colorPrimary"
                            android:buttonTint="@color/colorPrimary"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="4dp"/>
                        <CheckBox
                            android:id="@+id/checkBox8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="না"
                            android:textColor="@color/colorPrimary"
                            android:buttonTint="@color/colorPrimary"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="1dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="#আপনার পরিবারে কেউ কি বাংলাদেশের বাইরে থাকেন?"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/roboto"
                            android:layout_marginTop="8dp"
                            android:textStyle="bold"/>

                        <CheckBox
                            android:id="@+id/checkBox9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="হ্যাঁ"
                            android:textColor="@color/colorPrimary"
                            android:buttonTint="@color/colorPrimary"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="4dp"/>
                        <CheckBox
                            android:id="@+id/checkBox10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="না"
                            android:textColor="@color/colorPrimary"
                            android:buttonTint="@color/colorPrimary"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="1dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:layout_marginBottom="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp">
                        <Button
                            android:id="@+id/submit2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_input"
                            android:text="@string/Submit"
                            android:textColor="@color/colorPrimary"
                            android:onClick="submitInfo2"
                            tools:ignore="OnClick" />
                    </LinearLayout>
                </LinearLayout>






            </LinearLayout>


        </ScrollView>
    </RelativeLayout>

</FrameLayout>