<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".startingPage">

    <FrameLayout
        android:id="@+id/starting_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_info_black_24dp"
                            android:layout_alignParentLeft="true"
                            android:clickable="true"
                            android:onClick="popUpWindow"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="4dp"
                            tools:ignore="OnClick" />
                        <Button
                            android:id="@+id/corona"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_red"
                            android:text="corona.gov.bd"
                            android:textAllCaps="false"
                            android:textStyle="bold"
                            android:padding="6dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            android:clickable="true"
                            android:onClick="corona"
                            tools:ignore="OnClick" />

                    </RelativeLayout>

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="2"
                        android:rowCount="3"
                        android:alignmentMode="alignMargins"
                        android:columnOrderPreserved="false"
                        android:layout_marginTop="60dp">

                        <androidx.cardview.widget.CardView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="6dp"
                            app:cardCornerRadius="36dp"
                            android:layout_margin="12dp"
                            app:cardBackgroundColor="@color/colorPrimaryDark">



                            <LinearLayout
                                android:id="@+id/donation"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp"
                                android:clickable="true"
                                android:onClick="donation"
                                tools:ignore="OnClick">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/hand" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/provide_support"
                                    android:textStyle="bold"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:textAllCaps="true"/>
                            </LinearLayout>



                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="6dp"
                            app:cardCornerRadius="36dp"
                            android:layout_margin="12dp"
                            app:cardBackgroundColor="@color/colorPrimaryDark">


                            <LinearLayout
                                android:id="@+id/receive"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp"
                                android:clickable="true"
                                android:onClick="receivePage">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/volunteer" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/ask_for_support"
                                    android:textAlignment="center"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:textAllCaps="true"/>
                            </LinearLayout>


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="6dp"
                            app:cardCornerRadius="36dp"
                            android:layout_margin="12dp"
                            app:cardBackgroundColor="@color/colorPrimaryDark">


                            <LinearLayout
                                android:id="@+id/update"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp"
                                android:clickable="true"
                                android:onClick="levelest">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/coronavirus" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/update"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:textAllCaps="true"/>
                            </LinearLayout>


                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="6dp"
                            app:cardCornerRadius="36dp"
                            android:layout_margin="12dp"
                            app:cardBackgroundColor="@color/colorPrimaryDark">


                            <LinearLayout
                                android:id="@+id/todo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp"
                                android:clickable="true"
                                android:onClick="protectPage"
                                tools:ignore="OnClick">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/patient" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/protect_yourself"
                                    android:textAlignment="center"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:textAllCaps="true"/>
                            </LinearLayout>


                        </androidx.cardview.widget.CardView>




                        <!--                    new-->


                    </GridLayout>

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:rowCount="2"
                        android:alignmentMode="alignMargins"
                        android:columnOrderPreserved="false">

                        <androidx.cardview.widget.CardView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="6dp"
                            app:cardCornerRadius="36dp"
                            android:layout_margin="12dp"
                            app:cardBackgroundColor="@color/colorPrimaryDark">



                            <RelativeLayout
                                android:id="@+id/call"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:clickable="true"
                                android:onClick="call"
                                tools:ignore="OnClick">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/call"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginLeft="8dp"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tap_here"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="12sp"
                                    android:textAllCaps="true"
                                    android:layout_centerInParent="true"
                                    android:layout_below="@id/call1"/>

                                <TextView
                                    android:id="@+id/call1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/emergency_call"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:textAllCaps="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginRight="8dp" />
                            </RelativeLayout>



                        </androidx.cardview.widget.CardView>


                        <!--                    new-->


                    </GridLayout>



                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>